# Anomaly-Detection-For-Health-Care-System

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  PLAN.md  PROJECT_STATE.md  SESSION.md  pyproject.toml  schema_for_SQL_PROJ.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_watermarks_last_hash.py  0003_check_versions_review_note.py  0004_check_versions_fallback_template.py  0005_narratives_composition_fields.py  (+2 more)
artifacts/: env-report.json  env-report.md
demo-ui/: index.html  seed_live_check.py  server.py
docs/: dsl.md  phi-boundary.md
docs/phases/: phase-02-dsl-compiler.md  (+11 more)
scripts/: check.ps1  fixture_db.ps1  fixture_db_setup.sql  profile.ps1  run.ps1  seed_action_library.ps1  seed_llm_drafts.ps1  verify_env.ps1
tests/: conftest.py  test_action_library.py  test_app_db.py  test_app_db_repo.py  test_archetype.py  test_audit_dual_sink.py  test_calibration.py  test_candidate_keys.py  test_catalog.py  test_check_dsl_schema.py  test_check_registry.py  test_checkpoint.py  test_compiler.py  test_compiler_guard_integration.py  test_config.py  test_connection.py  test_demotion.py  test_derive.py  test_dotenv.py  test_dsl.py  test_dsl_doc_coverage.py  test_export_reconciliation.py  test_feedback.py  test_fixture_suite.py  test_golden.py  test_llm_draft.py  test_package.py  test_precision.py  test_profile.py  test_profiler.py  test_recalibrate.py  test_reconcile.py  test_relationships.py  test_report.py  test_review_gate.py  test_rowstats.py  test_semantic_catalog_schema.py  test_sentinels.py  test_source.py  test_surface.py  (+4 more)
(+85 files in other folders)
