[project]
name = "cdss"
version = "0.1.0"
description = "Clinical Decision Support System — anomaly detection over INDICI_BI_Full"
requires-python = ">=3.12"
dependencies = [
    "pyodbc>=5.2",
    "sqlglot>=25",
    "jsonschema>=4.23",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.5",
    "psycopg[binary]>=3.3.4",
    "openai>=2.46.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdss"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "pyodbc"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cdss --cov-report=term-missing"
